Bug 166663 - Tags not showing pictures without "Include Tag Subtree"
Summary: Tags not showing pictures without "Include Tag Subtree"
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 0.10.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-15 21:07 UTC by Dotan Cohen
Modified: 2022-01-22 14:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2008-07-15 21:07:47 UTC
Version:           svn (using KDE 4.0.83)
Installed from:    Ubuntu Packages

If one disables "Include Tag Subtree" then no photos at all are shown with the Tag sidebar open. Screenshots:
http://dotancohen.com/images/examples/with_subtree.png
http://dotancohen.com/images/examples/without_subtree.png
Comment 1 caulier.gilles 2008-07-15 21:41:45 UTC
Dotan,

Sound like another problem with kioslave under KDE4. There is a dedicated slave to play with tags.

Look into the console if you can see few error messages.

Gilles Caulier
Comment 2 Marcel Wiesweg 2008-07-15 22:01:31 UTC
SVN commit 832927 by mwiesweg:

- fix number of bound parameter for non-recursive tag listing
- always check for Images.status == Visible, so that Removed images are never shown

BUG: 166663


 M  +12 -7     imagelister.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=832927