- fix number of bound parameter for non-recursive tag listing - always check for Images.status == Visible, so that Removed images are never shown

BUG: 166663

svn path=/trunk/extragear/graphics/digikam/; revision=832927